--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,15 @@ server.port=8082
 spring.mvc.view.prefix=/resources/templates
 spring.mvc.view.suffix=.html
 spring.mvc.hiddenmethod.filter.enabled=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?serverTimezone=UTC&characterEncoding=UTF-8&useUnicode=true
+spring.datasource.password=postgres
+spring.datasource.username=postgres
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.default_schema=public
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.sql.init.mode=always
+spring.sql.init.encoding=utf-8
